// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tests from RegistrationPage > should find emailInput data-testid 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <input
    class="q-field__native q-placeholder text-white"
    data-testid="fullNameInput"
    id="f_4a85bd44-d5ca-4dc0-bb61-9d39f0a666c2"
    label-class="text-white"
    placeholder="Enter your full name"
    style="color: white;"
    tabindex="0"
    type="text"
    value=""
  />,
}
`;

exports[`tests from RegistrationPage > should find fullNameInput data-testid 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <input
    class="q-field__native q-placeholder text-white"
    data-testid="fullNameInput"
    id="f_7e7659ff-48e9-4be7-82bd-79399b99f319"
    label-class="text-white"
    placeholder="Enter your full name"
    style="color: white;"
    tabindex="0"
    type="text"
    value=""
  />,
}
`;

exports[`tests from RegistrationPage > should find registrationMainText data-testid  1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <p
    class="text-h5 text-bold"
    data-testid="registrationMainText"
    data-v-6282d38c=""
  >
     Create account with email 
  </p>,
}
`;

exports[`tests from RegistrationPage > should find registrationSubText data-testid 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <p
    class="text-body2"
    data-testid="registrationSubText"
    data-v-6282d38c=""
  >
     Enter your details below to create your account 
  </p>,
}
`;

exports[`tests from RegistrationPage > should find rregistrationSubText data-testid 1`] = `
DOMWrapper {
  "isDisabled": [Function],
  "wrapperElement": <p
    class="text-body2"
    data-testid="registrationSubText"
    data-v-6282d38c=""
  >
     Enter your details below to create your account 
  </p>,
}
`;
